# semantic_map_rknn_rk3588

./: .gitignore  README.md  package.xml  setup.cfg  setup.py
config/: indoor_classes_80.txt  semantic_mapping.yaml
docs/: INTERFACES.md  PERFORMANCE_AND_OFFLINE_DIFF.md  RKNN_MODELS.md
launch/: semantic_mapping_rknn.launch.py
scripts/: cache_yolo_text_embeddings.py  check_orangepi.py  evaluate_rknn_projection_tracking.py  monitor_rk3588.sh  view_objects_2d.py  view_tracked_objects_3d.py
semantic_map_rknn/: bbox_projection.py  dataset_pipeline.py  mask_projection.py  mobilesam_rknn.py  object_fusion_node.py  object_map_io.py  object_tracker.py  offline_projector_node.py  point_cloud_io.py  rknn_runtime.py  sam_projector_node.py  spatial_filter.py  top_down_projection.py  yolo_world_node.py  yolo_world_rknn.py
test/: test_dataset_timing.py  test_mask_projection.py  test_mobilesam_rknn.py  test_object_map_io.py  test_object_tracker.py  test_rknn_runtime.py  test_top_down_projection.py  test_yolo_world_rknn.py
