<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>semantic_map_rknn</name>
  <version>0.1.0</version>
  <description>RK3588 YOLO-World and MobileSAM semantic object mapping.</description>
  <maintainer email="1074793744@qq.com">weiyu</maintainer>
  <license>Apache-2.0</license>

  <depend>cv_bridge</depend>
  <depend>geometry_msgs</depend>
  <depend>python3-numpy</depend>
  <depend>python3-opencv</depend>
  <depend>python3-scipy</depend>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>sensor_msgs_py</depend>
  <depend>std_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>visualization_msgs</depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
